# obstacle_overlay_node

./: CMakeLists.txt  README.md  package.xml
src/: obstacle_overlay_node.cpp
src/rviz/: env_config.cpp.in  env_config.h  frame_manager.cpp  frame_manager.h  image_display.cpp  image_display.h  point_cloud2_display.cpp  point_cloud2_display.h  point_cloud_common.cpp  point_cloud_common.h  point_cloud_transformer.h  point_cloud_transformers.cpp  point_cloud_transformers.h  renderer.cpp  renderer.h  ros_image_texture.cpp  ros_image_texture.h
src/rviz/ogre_helpers/: point_cloud.cpp  point_cloud.h
src/rviz/ogre_media/materials/glsl120/: depth.frag  depth.vert  depth_circle.frag  flat_color_circle.frag  glsl120.program  pass_color_circle.frag  pickcolor_circle.frag  point.vert
src/rviz/ogre_media/materials/glsl120/include/: circle_impl.frag  pack_depth.frag  pass_depth.vert
src/rviz/ogre_media/materials/glsl120/nogp/: billboard.vert  billboard_tile.vert  box.vert  nogp.program
src/rviz/selection/: forwards.h
